[package]
description = "Surrealdb support for the mobc connection pool"
documentation = "https://docs.rs/mobc-surrealdb"
edition = "2021"
keywords = ["surrealdb", "pool", "async", "await"]
license = "MIT OR Apache-2.0"
name = "mobc-surrealdb"
readme = "README.md"
repository = "https://github.com/noah123dkg/mobc-surrealdb"
version = "0.1.0"

[dependencies]
mobc = "0.8.5"
surrealdb = "2.2.0"

[dev-dependencies]
serde = {version = "1.0.210", features = ["derive"]}
tokio = {version = "1.43.0", features = ["full"]}

[package.metadata.docs.rs]
features = ["default"]
